<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin = "@dimen/app_margin">

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_10"
        android:text="@string/app_name"
        android:fontFamily="@font/nova_flat_regular"
        android:textSize="@dimen/font_logo"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_instruksi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_logo"
        android:textAlignment="center"
        android:text="@string/instruksi"
        android:textStyle="bold"
        android:textSize="@dimen/font_18"/>

    <ImageView
        android:id="@+id/img_dadu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>
  
    <Button
        android:id="@+id/btn_lempar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/lempar"
        android:fontFamily="@font/nova_flat_regular"/>

    <Button
        android:id="@+id/btn_tentang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/tentang_dadoo"
        android:fontFamily="@font/nova_flat_regular"/>

</RelativeLayout>
