<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/app_margin">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_28" />

    <TextView
        android:id="@+id/tv_judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_30"
        android:text="@string/tentang_dadoo"
        android:textSize="@dimen/font_24"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="?android:attr/textColorPrimary"/>

    <TextView
        android:id="@+id/tv_pengembang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_judul"
        android:text="@string/pengembang"
        android:textStyle="bold"
        android:textSize="@dimen/font_20"/>

    <TextView
        android:id="@+id/tv_kenny"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_pengembang"
        android:text="Kenny Gohan Siahaan"
        android:textSize="@dimen/font_16"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="(2015730065)"
        android:layout_below="@id/tv_pengembang"
        android:layout_toEndOf="@id/tv_kenny"
        android:layout_alignParentRight="true"
        android:textAlignment="textEnd"
        android:textSize="@dimen/font_16"/>

    <TextView
        android:id="@+id/tv_mega"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_kenny"
        android:text="Mega Rahmat"
        android:textSize="@dimen/font_16"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="(2017730021)"
        android:layout_below="@id/tv_kenny"
        android:layout_toEndOf="@id/tv_mega"
        android:layout_alignParentRight="true"
        android:textAlignment="textEnd"
        android:textSize="@dimen/font_16"/>

    <TextView
        android:id="@+id/tv_obed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_mega"
        android:text="Obed Kristiaji Sudarman"
        android:textSize="@dimen/font_16"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="(6181801003)"
        android:layout_below="@id/tv_mega"
        android:layout_toEndOf="@id/tv_obed"
        android:layout_alignParentRight="true"
        android:textAlignment="textEnd"
        android:textSize="@dimen/font_16"/>

    <TextView
        android:id="@+id/tv_johan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_obed"
        android:text="Johan Adi Wiguna"
        android:textSize="@dimen/font_16"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="(6181801018)"
        android:layout_below="@id/tv_obed"
        android:layout_toEndOf="@id/tv_johan"
        android:layout_alignParentRight="true"
        android:textAlignment="textEnd"
        android:textSize="@dimen/font_16"/>

    <TextView
        android:id="@+id/tv_lucyus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_johan"
        android:text="Lucyus Matthew Ardivan"
        android:textSize="@dimen/font_16"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="(6181801029)"
        android:layout_below="@id/tv_johan"
        android:layout_toEndOf="@id/tv_lucyus"
        android:layout_alignParentRight="true"
        android:textAlignment="textEnd"
        android:textSize="@dimen/font_16"/>

    <TextView
        android:id="@+id/tv_craven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_lucyus"
        android:layout_marginBottom="@dimen/app_margin"
        android:text="Craven Sachio Saputra"
        android:textSize="@dimen/font_16"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="(6181801063)"
        android:layout_below="@id/tv_lucyus"
        android:layout_toEndOf="@id/tv_craven"
        android:layout_alignParentRight="true"
        android:textAlignment="textEnd"
        android:textSize="@dimen/font_16"/>

    <TextView
        android:id="@+id/tv_kode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kode"
        android:layout_below="@id/tv_craven"
        android:textStyle="bold"
        android:textSize="@dimen/font_20"/>

    <TextView
        android:id="@+id/tv_github"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="https://github.com/ifunpar/Dadoo-Lempar-Dadu-Virtual"
        android:layout_below="@id/tv_kode"
        android:textSize="@dimen/font_16"
        android:layout_marginBottom="@dimen/app_margin"/>

    <TextView
        android:id="@+id/tv_web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/web"
        android:layout_below="@id/tv_github"
        android:textStyle="bold"
        android:textSize="@dimen/font_20"/>

    <TextView
        android:id="@+id/tv_if"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="https://informatika.unpar.ac.id/"
        android:layout_below="@id/tv_web"
        android:textSize="@dimen/font_16"/>

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/nova_flat_regular"
        android:text="@string/app_name"
        android:textSize="@dimen/font_28"
        android:textColor="@color/light_grey"/>

</RelativeLayout>